--- a/Style.css
+++ b/Style.css
@@ -1,50 +1,54 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  box-sizing: border-box;
 }
 
-.container{
-    width: 100%;
-    height: 100vh;
-    background: rgb(222, 224, 227);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.container {
+  width: 100%;
+  height: 100vh;
+  background: rgb(222, 224, 227);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.calculator{
-    background: #273b57;
-    padding: 20px;
-    border-radius: 15px;
+.calculator {
+  background: #273b57;
+  padding: 5px;
+  border-radius: 15px;
+  /* max-width: fit-content; */
 }
-.calculator form input{
-    border: 0;
-    outline: 0;
-    width: 60px;
-    height: 60px;
-    border-radius: 10px;
-    background-color: transparent;
-    box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.2);
-    font-size: 20px;
-    color: white;
-    cursor: pointer;
-    margin: 10px;
+.calculator form input {
+  border: 0;
+  outline: 0;
+  width: 60px;
+  height: 60px;
+  border-radius: 10px;
+  background-color: transparent;
+  box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1),
+    5px 5px 15px rgba(0, 0, 0, 0.2);
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
+  margin: 10px;
 }
-form .display{
-   display: flex;
-   justify-content: flex-end;
-   margin: 20px 0;
+form .display {
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px 0;
 }
-form .display input{
-    text-align: right;
-    flex: 1;
-    font-size: 45px;
-    box-shadow: none;
+form .display input {
+  text-align: right;
+  flex: 1;
+  font-size: 45px;
+  box-shadow: none;
 }
-form input.equal{
-    width: 145px;
+form input.equal {
+  width: 145px;
 }
-form input.operator{
-    color: aqua;
+form input.operator {
+  color: aqua;
 }
+
